# sif-rs

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  rungibo.sh  rustfmt.toml
sif/: Cargo.toml  rustfmt.toml
sif_error/: Cargo.toml
sif_error/src/: error.rs  lib.rs  unwrap.rs
sif_graphics/: Cargo.toml  clippy.toml
sif_graphics/src/: animation.rs  camera.rs  color.rs  element.rs  error.rs  image.rs  into_graphics.rs  lbf.rs  lib.rs  light.rs  material.rs  mesh.rs  model.rs  object.rs  offsets.rs  pipeline.rs  scene.rs  shadow.rs  submesh.rs  texture.rs
sif_graphics/src/animation/: curve.rs  driver.rs  interpolation.rs  keyframe.rs  mod.rs
sif_graphics/src/assets/glsl/: common.glsl
sif_graphics/src/assets/glsl/pipeline/: fragment.glsl  uniform.glsl  vertex.glsl
sif_graphics/src/lbf/: animation_driver.rs  error.rs  light.rs  loader.rs  material.rs  mesh.rs  mod.rs  model.rs  object.rs  polygon.rs  texture.rs
sif_graphics/src/lbf/loader/: mod.rs  rlua.rs
sif_graphics/src/lbf/loader/lua/: lua_state_ex.rs  lua_type.rs  mod.rs
sif_graphics/src/lbf/loader/rlua/: lua_type.rs  mod.rs
sif_graphics/src/post/: depth_map.rs  effect.rs  mod.rs  screen.rs  square_buffer.rs
sif_graphics/src/post/effect/: blur.rs  mod.rs  pass.rs
sif_graphics/src/text/: font.rs  glyph.rs  layer.rs  metal.rs  mod.rs
sif_manager/: Cargo.toml
sif_manager/src/: error.rs  lib.rs  manager.rs
sif_math/: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
sif_math/src/: cleanup.rs  float.rs  integer.rs  interpolation.rs  lib.rs  matrix.rs  number.rs  quaternion.rs  vector.rs
sif_nursery/: .gitignore  Cargo.toml  rustfmt.toml
sif_nursery/src/: lib.rs  physics.rs  sequence.rs
sif_nursery/src/geometry/: capsule.rs  cube.rs  cuboid.rs  mod.rs  plane.rs  ray.rs  segment.rs  sphere.rs
sif_nursery/src/physics/: error.rs  rigit.rs
sif_nursery/src/sequence/: mod.rs
sif_renderer/: Cargo.toml  rustfmt.toml
sif_renderer/src/: bind.rs  buffer.rs  error.rs  frame.rs  gl_error.rs  lib.rs  program.rs  render.rs  shader.rs  texture.rs
sif_three/: Cargo.toml
sif_three/src/: armature.rs  error.rs  graph.rs  lib.rs  trarotsca.rs
sif_three/src/armature/: bone.rs  mod.rs  pose.rs
sif_three/src/graph/: mod.rs  node.rs
src/: error.rs  lib.rs  unwrap.rs
src/geometry/: capsule.rs  cube.rs  cuboid.rs  mod.rs  plane.rs  ray.rs  segment.rs  sphere.rs
src/math/: cleanup.rs  epsilon.rs  error.rs  matrix.rs  mod.rs  number.rs  quaternion.rs  vector.rs
src/renderer/: bind.rs  buffer.rs  error.rs  frame.rs  gl_error.rs  mod.rs  program.rs  render.rs  result.rs  shader.rs  texture.rs
