# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "sif"
version                 = "0.4.3-alpha.0"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT/Apache-2.0"
keywords                = ["subsystem", "game", "math", "graphics"]
description             = "Game libraries"
readme                  = "README.md"
documentation           = "https://github.com/hanepjiv/sif-rs/wiki"
homepage                = "https://github.com/hanepjiv/sif-rs"
repository              = "https://github.com/hanepjiv/sif-rs.git"
publish                 = false
# =============================================================================
[features]
default                 = ["graphics-lbf-rlua"]
graphics-lbf-lua        = ["sif_graphics/lbf-lua"]
graphics-lbf-rlua       = ["sif_graphics/lbf-rlua"]
# =============================================================================
[workspace]
members                 = [
                        "sif_error",
                        "sif_graphics",
                        "sif_manager",
                        "sif_math",
                        "sif_nursery",
                        "sif_renderer",
                        "sif_three",
                        ]
# =============================================================================
[dependencies]
sif_error               = { default-features = false, path="sif_error" }
sif_graphics            = { default-features = false, path="sif_graphics" }
sif_math                = { default-features = false, path="sif_math" }
sif_manager             = { default-features = false, path="sif_manager" }
sif_nursery             = { default-features = false, path="sif_nursery" }
sif_renderer            = { default-features = false, path="sif_renderer" }
sif_three               = { default-features = false, path="sif_three" }
# =============================================================================
[replace]
#"sif_error:0.1.0"      = { default-features = false, path="./sif_error" }
#"sif_graphics:0.1.0"   = { default-features = false, path="./sif_graphics" }
#"sif_manager:0.1.0"    = { default-features = false, path="./sif_manager" }
#"sif_math:0.1.0"       = { default-features = false, path="./sif_math" }
#"sif_nursery:0.1.0"    = { default-features = false, path="./sif_nursery" }
#"sif_renderer:0.1.0"   = { default-features = false, path="./sif_renderer" }
#"sif_three:0.1.0"      = { default-features = false, path="./sif_three" }
