# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "sif"
version                 = "0.4.4-alpha.0"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT/Apache-2.0"
keywords                = ["subsystem", "game", "math", "graphics"]
description             = "Game libraries"
readme                  = "README.md"
documentation           = "https://github.com/hanepjiv/sif-rs/wiki"
homepage                = "https://github.com/hanepjiv/sif-rs"
repository              = "https://github.com/hanepjiv/sif-rs.git"
publish                 = false
# =============================================================================
[features]
default                 = [ "graphics-lbf-rlua",
                            "graphics-lbf-rlua-builtin-lua",
                            ]
# -----------------------------------------------------------------------------
graphics-renderer-gif_codec     = ["sif_graphics/renderer-gif_codec"]
graphics-renderer-jpeg          = ["sif_graphics/renderer-jpeg"]
graphics-renderer-ico           = ["sif_graphics/renderer-ico"]
graphics-renderer-png_codec     = ["sif_graphics/renderer-png_codec"]
graphics-renderer-pnm           = ["sif_graphics/renderer-pnm"]
graphics-renderer-tga           = ["sif_graphics/renderer-tga"]
graphics-renderer-tiff          = ["sif_graphics/renderer-tiff"]
graphics-renderer-webp          = ["sif_graphics/renderer-webp"]
graphics-renderer-bmp           = ["sif_graphics/renderer-bmp"]
graphics-renderer-hdr           = ["sif_graphics/renderer-hdr"]
graphics-renderer-dxt           = ["sif_graphics/renderer-dxt"]
graphics-renderer-jpeg_rayon    = ["sif_graphics/renderer-jpeg_rayon"]
# -----------------------------------------------------------------------------
graphics-lbf-lua                = ["sif_graphics/lbf-lua"]
graphics-lbf-rlua               = ["sif_graphics/lbf-rlua"]
graphics-lbf-rlua-builtin-lua   = ["sif_graphics/lbf-rlua-builtin-lua"]
# =============================================================================
[workspace]
members                 = [
                        "sif_error",
                        "sif_graphics",
                        "sif_manager",
                        "sif_math",
                        "sif_nursery",
                        "sif_renderer",
                        "sif_three",
                        ]
# =============================================================================
[dependencies]
sif_error               = { default-features = false, path="sif_error" }
sif_graphics            = { default-features = false, path="sif_graphics" }
sif_math                = { default-features = false, path="sif_math" }
sif_manager             = { default-features = false, path="sif_manager" }
sif_nursery             = { default-features = false, path="sif_nursery" }
sif_renderer            = { default-features = false, path="sif_renderer" }
sif_three               = { default-features = false, path="sif_three" }
# =============================================================================
[replace]
#"sif_error:0.1.0"      = { default-features = false, path="./sif_error" }
#"sif_graphics:0.1.0"   = { default-features = false, path="./sif_graphics" }
#"sif_manager:0.1.0"    = { default-features = false, path="./sif_manager" }
#"sif_math:0.1.0"       = { default-features = false, path="./sif_math" }
#"sif_nursery:0.1.0"    = { default-features = false, path="./sif_nursery" }
#"sif_renderer:0.1.0"   = { default-features = false, path="./sif_renderer" }
#"sif_three:0.1.0"      = { default-features = false, path="./sif_three" }
