# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
edition                 = "2018"
name                    = "sif"
version                 = "0.6.1-alpha.2"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT/Apache-2.0"
keywords                = ["subsystem", "game", "math", "graphics"]
description             = "Game libraries"
readme                  = "README.md"
documentation           = "https://github.com/hanepjiv/sif-rs/wiki"
homepage                = "https://github.com/hanepjiv/sif-rs"
repository              = "https://github.com/hanepjiv/sif-rs.git"
publish                 = false
# =============================================================================
[features]
default                 = [ "png",
                            "lbf-rlua",
                            "lbf-rlua-builtin-lua",
                            ]
# -----------------------------------------------------------------------------
gif                     = ["sif_graphics/gif"]
jpeg                    = ["sif_graphics/jpeg"]
ico                     = ["sif_graphics/ico"]
png                     = ["sif_graphics/png"]
pnm                     = ["sif_graphics/pnm"]
tga                     = ["sif_graphics/tga"]
tiff                    = ["sif_graphics/tiff"]
webp                    = ["sif_graphics/webp"]
bmp                     = ["sif_graphics/bmp"]
hdr                     = ["sif_graphics/hdr"]
dxt                     = ["sif_graphics/dxt"]
jpeg_rayon              = ["sif_graphics/jpeg_rayon"]
# -----------------------------------------------------------------------------
lbf-rlua                = ["sif_graphics/lbf-rlua"]
lbf-rlua-builtin-lua    = ["sif_graphics/lbf-rlua-builtin-lua"]
# =============================================================================
[workspace]
members                 = [ "sif_error",
                            "sif_graphics",
                            "sif_manager",
                            "sif_math",
                            "sif_nursery",
                            "sif_renderer",
                            "sif_three",
                            ]
# =============================================================================
[dependencies]
sif_error               = { default-features = false, path="sif_error" }
sif_graphics            = { default-features = false, path="sif_graphics" }
sif_math                = { default-features = false, path="sif_math" }
sif_manager             = { default-features = false, path="sif_manager" }
sif_nursery             = { default-features = false, path="sif_nursery" }
sif_renderer            = { default-features = false, path="sif_renderer" }
sif_three               = { default-features = false, path="sif_three" }
# =============================================================================
[replace]
#"sif_error:0.1.0"      = { default-features = false, path="./sif_error" }
#"sif_graphics:0.1.0"   = { default-features = false, path="./sif_graphics" }
#"sif_manager:0.1.0"    = { default-features = false, path="./sif_manager" }
#"sif_math:0.1.0"       = { default-features = false, path="./sif_math" }
#"sif_nursery:0.1.0"    = { default-features = false, path="./sif_nursery" }
#"sif_renderer:0.1.0"   = { default-features = false, path="./sif_renderer" }
#"sif_three:0.1.0"      = { default-features = false, path="./sif_three" }
