# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "sif"
version                 = "0.3.0"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT/Apache-2.0"
keywords                = ["subsystem", "game", "math", "graphics"]
description             = "Game libraries"
readme                  = "README.md"
documentation           = "https://github.com/hanepjiv/sif-rs/wiki"
homepage                = "https://github.com/hanepjiv/sif-rs"
repository              = "https://github.com/hanepjiv/sif-rs.git"
publish                 = false
# =============================================================================
[dependencies]
sif_error               = { default-features = false, path="../sif_error" }
sif_graphics            = { default-features = false, path="../sif_graphics" }
sif_math                = { default-features = false, path="../sif_math" }
sif_manager             = { default-features = false, path="../sif_manager" }
sif_nursery             = { default-features = false, path="../sif_nursery" }
sif_renderer            = { default-features = false, path="../sif_renderer" }
sif_three               = { default-features = false, path="../sif_three" }
