# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "sif_graphics"
version                 = "0.1.0"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT/Apache-2.0"
keywords                = ["subsystem", "game", "graphics"]
description             = "Game libraries"
readme                  = "README.md"
documentation           = "https://github.com/hanepjiv/sif-rs/wiki"
homepage                = "https://github.com/hanepjiv/sif-rs"
repository              = "https://github.com/hanepjiv/sif-rs.git"
publish                 = false
# =============================================================================
[features]
default                 = ["lbf-rlua", "lbf-rlua-builtin-lua"]
# -----------------------------------------------------------------------------
renderer-gif_codec      = ["sif_renderer/gif_codec"]
renderer-jpeg           = ["sif_renderer/jpeg"]
renderer-ico            = ["sif_renderer/ico"]
renderer-png_codec      = ["sif_renderer/png_codec"]
renderer-pnm            = ["sif_renderer/pnm"]
renderer-tga            = ["sif_renderer/tga"]
renderer-tiff           = ["sif_renderer/tiff"]
renderer-webp           = ["sif_renderer/webp"]
renderer-bmp            = ["sif_renderer/bmp"]
renderer-hdr            = ["sif_renderer/hdr"]
renderer-dxt            = ["sif_renderer/dxt"]
renderer-jpeg_rayon     = ["sif_renderer/jpeg_rayon"]
# -----------------------------------------------------------------------------
lbf-lua                 = ["lua"]
lbf-rlua                = ["rlua"]
lbf-rlua-builtin-lua    = ["rlua/builtin-lua"]
# =============================================================================
[dependencies]
bitflags                = { default-features = false, version = "^1.0" }
gl                      = { default-features = false, version = "^0.10" }
log                     = { default-features = false, version = "^0.4" }
num                     = { default-features = false, version = "^0.1" }
uuid                    = { default-features = false, version = "^0.6" }
# -----------------------------------------------------------------------------
sif_error               = { default-features = false, path="../sif_error" }
sif_manager             = { default-features = false, path="../sif_manager" }
sif_math                = { default-features = false, path="../sif_math" }
sif_renderer            = { default-features = false, path="../sif_renderer" }
sif_three               = { default-features = false, path="../sif_three" }
# -----------------------------------------------------------------------------
[dependencies.lua]
version                 = "^0.0"
default-features        = false
optional                = true
# -----------------------------------------------------------------------------
[dependencies.rlua]
version                 = "^0.13"
default-features        = false
optional                = true
# -----------------------------------------------------------------------------
[dependencies.rand]
version                 = "^0.5"
default-features        = false
features                = ["std"]
# -----------------------------------------------------------------------------
[dependencies.sdl2]
version                 = "^0.31"
default-features        = false
features                = ["ttf"]
