# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "sif_manager"
version                 = "0.1.0"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT/Apache-2.0"
keywords                = ["subsystem",]
description             = "Object management container."
readme                  = "README.md"
documentation           = "https://github.com/hanepjiv/sif-rs/wiki"
homepage                = "https://github.com/hanepjiv/sif-rs"
repository              = "https://github.com/hanepjiv/sif-rs.git"
publish                 = false
# =============================================================================
[dependencies]
# -----------------------------------------------------------------------------
[dependencies.uuid]
default-features        = false
version                 = "^0.6"
features                = ["v4"]
