# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "sif_renderer"
version                 = "0.1.0"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT/Apache-2.0"
keywords                = ["OpenGL", "renderer"]
description             = "OpenGL renderer"
readme                  = "README.md"
documentation           = "https://github.com/hanepjiv/sif-rs/wiki"
homepage                = "https://github.com/hanepjiv/sif-rs"
repository              = "https://github.com/hanepjiv/sif-rs.git"
publish                 = false
# =============================================================================
[features]
default                 = ["png_codec"]
# -----------------------------------------------------------------------------
gif_codec               = ["image/gif_codec"]
jpeg                    = ["image/jpeg"]
ico                     = ["image/ico"]
png_codec               = ["image/png_codec"]
pnm                     = ["image/pnm"]
tga                     = ["image/tga"]
tiff                    = ["image/tiff"]
webp                    = ["image/webp"]
bmp                     = ["image/bmp"]
hdr                     = ["image/hdr"]
dxt                     = ["image/dxt"]
jpeg_rayon              = ["image/jpeg_rayon"]
# =============================================================================
[dependencies]
gl                      = { default-features = false, version = "^0.10" }
log                     = { default-features = false, version = "^0.4" }
image                   = { default-features = false, version = "^0.20" }
