# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "sif_three"
version                 = "0.1.0"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT/Apache-2.0"
keywords                = ["subsystem", "game", ]
description             = "Game libraries"
readme                  = "README.md"
documentation           = "https://github.com/hanepjiv/sif-rs/wiki"
homepage                = "https://github.com/hanepjiv/sif-rs"
repository              = "https://github.com/hanepjiv/sif-rs.git"
publish                 = false
# =============================================================================
[dependencies]
bitflags                = { default-features = false, version = "^1.0" }
num                     = { default-features = false, version = "^0.1" }
# -----------------------------------------------------------------------------
sif_manager             = { default-features = false, path="../sif_manager" }
sif_math                = { default-features = false, path="../sif_math" }
# -----------------------------------------------------------------------------
[dependencies.uuid]
default-features        = false
version                 = "^0.6"
features                = ["v4"]
